--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Plotly.plot(document.getElementById("plot"), {
     data: [{
         "y"     : ["1", "2", "1"],
         "x"     : ["5", "21", "24"],
-        "width" : ["1", "1", "1"]
+        "width" : ["1", "1", "1"],
         "type"  : "bar",
         "name"  : "B"
     }],
